fix: Adjust CSS classes for skill and blueprint cards; add hidden overflow in sections

--- a/app/globals.css
+++ b/app/globals.css
@@ -62,14 +62,14 @@ html.dark {
   .skill__card {
     background-color: var(--bg-skill);
     color: var(--text-secondary);
-    @apply duration-300 grid grid-cols-2 transition-all items-center justify-center h-20 w-40 mx-auto lg:h-40 lg:w-full lg:p-10 rounded-lg;
+    @apply duration-300 grid grid-cols-2 transition-all items-center justify-center w-40 mx-auto h-40 md:w-full p-10 rounded-lg;
   }
   .skill__text {
-    @apply items-center text-sm lg:text-xl text-justify overflow-hidden text-clip;
+    @apply items-center text-lg md:text-xl text-justify overflow-hidden text-clip;
   }
 
-  .skill__card__select {
-    @apply text-base md:text-lg lg:text-3xl  flex gap-5 items-center justify-center hover:text-green-950;
+  .project__card__select {
+    @apply text-lg lg:text-3xl  flex gap-5 items-center justify-center hover:text-green-950;
   }
 
   .checkbox {
